--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,11 @@ body {
   background-color: #333333;
 }
 
-a{
+a {
   text-decoration: none;
 }
 
-#help{
+#help {
   font-family: monospace;
   font-size: 12px;
   margin: 0;
@@ -18,43 +18,41 @@ a{
 #game-title {
   font-family: monospace;
   font-size: 3rem;
-  margin:  2.5% auto 1%;
-  color: #FEF2BF;
+  margin: 2.5% auto 1%;
+  color: #fef2bf;
 }
 
 #level-title {
-  font-family: 'Press Start 2P', cursive;
+  font-family: "Press Start 2P", cursive;
   font-size: 1rem;
-  margin:  2% auto 1%;
-  color: #FEF2BF;
+  margin: 2% auto 1%;
+  color: #fef2bf;
 }
 
-#rule-title{
-  font-family: 'Press Start 2P', cursive;
+#rule-title {
+  font-family: "Press Start 2P", cursive;
   font-size: 1rem;
-  margin:  4% auto 1%;
-  color: #FEF2BF;
+  margin: 4% auto 1%;
+  color: #fef2bf;
   text-align: center;
 }
 
-#rule-text{
+#rule-text {
   font-family: monospace;
   font-size: 1rem;
-  margin:  1% auto 1%;
-  color: #FEF2BF;
+  margin: 1% auto 1%;
+  color: #fef2bf;
   width: 50%;
 }
 
-#rule-text p{
+#rule-text p {
   display: inline-block;
-  
 }
 
 .container {
   display: block;
   width: 50%;
   margin: auto;
-
 }
 
 .btn {
